# nlt-toi

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NLT-DEV-OTOI.md  README.md  file-structure.md  nltotoi.json  pyproject.toml  toi-otoi-agents.md
.github/workflows/: accessibility-check.yml  deploy-toi-agent-pages.yml  schema-validation.yml  security-scan.yml
.nltotoi/: README.md
.nltotoi/index/: governance-files.md
.nltotoi/proposals/: validation-roadmap.md
.nltotoi/scripts/: validate-governance.sh
SOPs/: incident-response.md  new-agent-onboarding.md  repo-governance-setup.md
agents/: nlt-governance-steward.md  nlt-onboarding-assistant.md
docs/: active-threads.md  app.js  development-process.md  framework-overview.md  index.html  styles.css
docs/agent-log/: 2026-05-21-codex-repo-specific-governance.md  README.md
docs/agent-log/handoffs/: 2026-04-25-codex-batch1-governance-sync-handoff.json  2026-05-29-toi-foundation-pour.json  2026-05-31-codex-readme-update.json  2026-06-22-claude-fix-npm-dist-handoff.json  2026-06-22-claude-toi-npm-receipts.json
docs/agent-log/registrations/: 2026-04-25-codex-batch1-governance-sync.json  2026-05-29-claude-code.json  2026-05-31-codex-readme-update.json  2026-06-22-claude-fix-npm-dist.json  2026-06-22-claude-toi-npm-receipts.json
docs/escalations/: README.md
nlt-otoi/: LICENSE  README.md
nlt_toi/: generator.py
nlt_toi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
schemas/: personal-toi.schema.json
src/: __init__.py
src/fusion/: __init__.py  agent_solidarity_kit.py  otoi_orchestrator.py  privacy_guardian.py  toi_parser.py
src/nlt_toi/: __init__.py  b64url.py  canonicalize.py  cli.py  constants.py  errors.py  generator.py  parse.py  schema.py  sign.py  tier.py
src/nlt_toi/schemas/: toi-1.0.0.schema.json
templates/: commit-message.md
tests/: conftest.py  test_b64url.py  test_canonicalize.py  test_conformance.py  test_generator.py  test_parse.py  test_sign.py  test_tier.py
tests/fixtures/invalid/: bad-enum.toi  bad-signature-alg.toi  bad-uuid.toi  empty-author.toi  missing-tier.toi
tests/fixtures/valid/: full-coverage.toi  project-tier.toi  signed.toi
