[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlt-toi"
version = "0.2.0"
description = "NeuroLift TOI Framework — Terms of Interaction generator, parser, and validator"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["toi", "neurodivergent", "privacy", "accessibility", "ai-governance"]
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "PyYAML>=6.0",
]

[project.scripts]
toi-generator = "nlt_toi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nlt_toi*", "src*"]

[tool.setuptools.package-data]
"*" = ["schemas/*.json", "schemas/**/*.json"]
