[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nlt-toi"
version = "1.0.0"
description = "Python reference implementation of the .toi (Terms of Interaction) standard — parse, validate, RFC 8785 canonicalize, and Ed25519 sign/verify."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "NeuroLift Technologies, LLC" }]
keywords = [
    "toi",
    "terms-of-interaction",
    "neurodivergent",
    "ai-governance",
    "user-agency",
    "ed25519",
    "rfc8785",
    "solidarity-framework",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "jsonschema>=4.18.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/NeuroLift-Technologies/nlt-toi"
Repository = "https://github.com/NeuroLift-Technologies/nlt-toi"
Issues = "https://github.com/NeuroLift-Technologies/nlt-toi/issues"

# --- Build backend (Hatchling) -------------------------------------------------
# src/ layout: the importable package is src/nlt_toi, published as ``nlt_toi``.
# The canonical JSON Schema lives inside the package (src/nlt_toi/schemas/), so it
# is bundled automatically — no force-include needed.
[tool.hatch.build.targets.wheel]
packages = ["src/nlt_toi"]

# Lean sdist: only what the package and its conformance suite need.
[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "README.md", "CHANGELOG.md", "LICENSE"]

# --- Test config ---------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
